Calculate ingredient contributions with getters

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -9,39 +9,14 @@
 <ion-content padding>
 
   <div *ngFor="let foodKey of FOOD_KEYS">
-    <p *ngIf="foods[foodKey] | async as food">
-        {{(amounts[foodKey] | async)}} g of <strong>{{food.name}}</strong>: {{food.energy}}, {{food.protein}} protein, {{food.water}} water
+    <p *ngIf="ingredients[foodKey] | async as ingredient">
+      {{ ingredient.amount }} g of <strong>{{ ingredient.food.name }}</strong>: {{ ingredient.energy | format }} in {{ ingredient.water | format }} water, {{ingredient.protein | format}} protein, {{ ingredient.lipids | format }} lipids and {{ ingredient.totalCarbs | format }} carbs
       <ion-range min="0" max="200" step="5" [formControl]="amountControllers[foodKey]">
         <ion-icon small range-left name="sunny"></ion-icon>
         <ion-icon range-right name="sunny"></ion-icon>
       </ion-range>
+      <!-- <code><pre>{{ ingredient.food | json }}</pre></code> -->
     </p>
-    {{(amounts[foodKey] | async)}}
   </div>
   
-  <pre><code>
-      <!-- {{amounts | json}} -->
-  </code></pre>
-
-
-  <!-- <p *ngFor="let food of (foods | async)">
-    Why don't you eat 100 g {{ food.name }}? It's only {{ food.energy }}.
-  </p>
-
-  <p *ngIf="food | async as food">
-    Why don't you eat {{ grams | async }} g of {{ food.name }}? It's only {{ energy | async }}.
-  </p>
-
-  <p>
-    Why don't you eat {{ grams | async }}.
-  </p>
-
-  <ion-item>
-    <ion-range min="0" max="200" step="5" [formControl]="gramControl">
-      <ion-icon small range-left name="sunny"></ion-icon>
-      <ion-icon range-right name="sunny"></ion-icon>
-    </ion-range>
-  </ion-item>
-
-  <code><pre>{{food | async | json}}</pre></code> -->
 </ion-content>
