--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -12,8 +12,8 @@
     <p *ngIf="ingredients[foodKey] | async as ingredient">
       {{ ingredient.amount }} g of <strong>{{ ingredient.food.name }}</strong>: {{ ingredient.energy | format }} in {{ ingredient.water | format }} water, {{ingredient.protein | format}} protein, {{ ingredient.lipids | format }} lipids and {{ ingredient.totalCarbs | format }} carbs
       <ion-range min="0" max="200" step="5" [formControl]="amountControllers[foodKey]">
-        <ion-icon small range-left name="sunny"></ion-icon>
-        <ion-icon range-right name="sunny"></ion-icon>
+        <ion-icon small range-left name="cafe"></ion-icon>
+        <ion-icon range-right name="cafe"></ion-icon>
       </ion-range>
       <!-- <code><pre>{{ ingredient.food | json }}</pre></code> -->
     </p>
