--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,15 +8,18 @@
 
 <ion-content padding>
 
-  <div *ngFor="let foodKey of FOOD_KEYS">
-    <p *ngIf="ingredients[foodKey] | async as ingredient">
+
+<ion-list>
+  <ion-item *ngFor="let foodKey of FOOD_KEYS">
+    <div *ngIf="ingredients[foodKey] | async as ingredient" style="min-width: 100%">
       {{ ingredient.amount }} g of <strong>{{ ingredient.food.name }}</strong>: {{ ingredient.energy | format }} in {{ ingredient.water | format }} water, {{ingredient.protein | format}} protein, {{ ingredient.lipids | format }} lipids and {{ ingredient.totalCarbs | format }} carbs
       <ion-range min="0" max="200" step="5" [formControl]="amountControllers[foodKey]">
         <ion-icon small range-left name="cafe"></ion-icon>
         <ion-icon range-right name="cafe"></ion-icon>
       </ion-range>
       <!-- <code><pre>{{ ingredient.food | json }}</pre></code> -->
-    </p>
-  </div>
+    </div>
+  </ion-item>
+</ion-list>
   
 </ion-content>
