--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -11,8 +11,20 @@
 
 <ion-list>
   <ion-item *ngFor="let foodKey of FOOD_KEYS">
-    <div *ngIf="ingredients[foodKey] | async as ingredient" style="min-width: 100%">
-      {{ ingredient.amount }} g of <strong>{{ ingredient.food.name }}</strong>: {{ ingredient.energy | format }} in {{ ingredient.water | format }} water, {{ingredient.protein | format}} protein, {{ ingredient.lipids | format }} lipids and {{ ingredient.totalCarbs | format }} carbs
+    <div *ngIf="ingredients[foodKey] | async as ingredient" style="min-width: 50rem">
+      <h1><small>{{ ingredient.amount }} g of </small>{{ ingredient.food.name | titlecase }}</h1>
+      <p>
+        {{ ingredient.energy | format }} 
+      </p>
+      <p>
+        {{ ingredient.water | format }} Water &middot; {{ingredient.protein | format}} Protein &middot; {{ ingredient.lipids | format }} Lipids &middot; {{ ingredient.totalCarbs | format }} Carbs
+      </p>
+      <p>
+        {{ ingredient.calcium | format }} Calcium &middot; {{ingredient.magnesium | format}} Magnesium &middot; {{ ingredient.iron | format }} Iron
+      </p>
+      <p>
+        {{ ingredient.vitamin_a | format }} Vitamin A &middot; {{ingredient.vitamin_b6 | format}} Vitamin B6 &middot; {{ ingredient.vitamin_c | format }} Vitamin C &middot; {{ ingredient.vitamin_d | format }} Vitamin D
+      </p>
       <ion-range min="0" max="200" step="5" [formControl]="amountControllers[foodKey]">
         <ion-icon small range-left name="cafe"></ion-icon>
         <ion-icon range-right name="cafe"></ion-icon>
