--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,45 +7,51 @@
 </ion-header>
 
 <ion-content padding>
-
-
-<ion-list>
-  <ion-item *ngFor="let foodKey of FOOD_KEYS">
-    <div *ngIf="ingredients[foodKey] | async as ingredient" style="min-width: 50rem">
-      <h1><small>{{ ingredient.amount }} g of </small>{{ ingredient.food.name | titlecase }}</h1>
-      <p>
-        {{ ingredient.energy | format }} 
-      </p>
-      <p>
-        {{ ingredient.water | format }} Water &middot; {{ingredient.protein | format}} Protein &middot; {{ ingredient.lipids | format }} Lipids &middot; {{ ingredient.totalCarbs | format }} Carbs
-      </p>
-      <p>
-        {{ ingredient.calcium | format }} Calcium &middot; {{ingredient.magnesium | format}} Magnesium &middot; {{ ingredient.iron | format }} Iron
-      </p>
-      <p>
-        {{ ingredient.vitamin_a | format }} Vitamin A &middot; {{ingredient.vitamin_b6 | format}} Vitamin B6 &middot; {{ ingredient.vitamin_c | format }} Vitamin C &middot; {{ ingredient.vitamin_d | format }} Vitamin D
-      </p>
-      <ion-range min="0" max="200" step="5" [formControl]="amountControllers[foodKey]">
-        <ion-icon small range-left name="cafe"></ion-icon>
-        <ion-icon range-right name="cafe"></ion-icon>
-      </ion-range>
-      <!-- <code><pre>{{ ingredient.food | json }}</pre></code> -->
-    </div>
-  </ion-item>
-</ion-list>
-
-<h1><small>{{ nutrients['amount'] | async | format }} g of </small>Super Duper Müsli</h1>
-<p>
-  {{ nutrients['energy'] | async | format }} 
-</p>
-<p>
-  {{ nutrients['water'] | async | format }} Water &middot; {{nutrients['protein'] | async | format}} Protein &middot; {{ nutrients['lipids'] | async | format }} Lipids &middot; {{ nutrients['totalCarbs'] | async | format }} Carbs
-</p>
-<p>
-  {{ nutrients['calcium'] | async | format }} Calcium &middot; {{nutrients['magnesium'] | async | format}} Magnesium &middot; {{ nutrients['iron'] | async | format }} Iron
-</p>
-<p>
-  {{ nutrients['vitamin_a'] | async | format }} Vitamin A &middot; {{nutrients['vitamin_b6'] | async | format}} Vitamin B6 &middot; {{ nutrients['vitamin_c'] | async | format }} Vitamin C &middot; {{ nutrients['vitamin_d'] | async | format }} Vitamin D
-</p>
   
+  
+  <ion-grid>
+    <ion-row>
+      <ion-col col-12 col-lg-6>
+        <ion-list>
+          <ion-item *ngFor="let foodKey of FOOD_KEYS">
+            <div *ngIf="ingredients[foodKey] | async as ingredient" style="min-width: 50rem">
+              <h1><small>{{ ingredient.amount }} g of </small>{{ ingredient.food.name | titlecase }}</h1>
+              <p>
+                {{ ingredient.energy | format }} 
+              </p>
+              <p>
+                {{ ingredient.water | format }} Water &middot; {{ingredient.protein | format}} Protein &middot; {{ ingredient.lipids | format }} Lipids &middot; {{ ingredient.totalCarbs | format }} Carbs
+              </p>
+              <p>
+                {{ ingredient.calcium | format }} Calcium &middot; {{ingredient.magnesium | format}} Magnesium &middot; {{ ingredient.iron | format }} Iron
+              </p>
+              <p>
+                {{ ingredient.vitamin_a | format }} Vitamin A &middot; {{ingredient.vitamin_b6 | format}} Vitamin B6 &middot; {{ ingredient.vitamin_c | format }} Vitamin C &middot; {{ ingredient.vitamin_d | format }} Vitamin D
+              </p>
+              <ion-range min="0" max="200" step="5" [formControl]="amountControllers[foodKey]">
+                <ion-icon small range-left name="cafe"></ion-icon>
+                <ion-icon range-right name="cafe"></ion-icon>
+              </ion-range>
+              <!-- <code><pre>{{ ingredient.food | json }}</pre></code> -->
+            </div>
+          </ion-item>
+        </ion-list>
+      </ion-col>
+      <ion-col col-12 col-lg-6>
+        <h1><small>{{ nutrients['amount'] | async | format }} g of </small>Super Duper Müsli</h1>
+        <p>
+          {{ nutrients['energy'] | async | format }} 
+        </p>
+        <p>
+          {{ nutrients['water'] | async | format }} Water &middot; {{nutrients['protein'] | async | format}} Protein &middot; {{ nutrients['lipids'] | async | format }} Lipids &middot; {{ nutrients['totalCarbs'] | async | format }} Carbs
+        </p>
+        <p>
+          {{ nutrients['calcium'] | async | format }} Calcium &middot; {{nutrients['magnesium'] | async | format}} Magnesium &middot; {{ nutrients['iron'] | async | format }} Iron
+        </p>
+        <p>
+          {{ nutrients['vitamin_a'] | async | format }} Vitamin A &middot; {{nutrients['vitamin_b6'] | async | format}} Vitamin B6 &middot; {{ nutrients['vitamin_c'] | async | format }} Vitamin C &middot; {{ nutrients['vitamin_d'] | async | format }} Vitamin D
+        </p>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
