--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -96,6 +96,11 @@
           </p>
         </ion-col>
       </ion-row>
+      <ion-row>
+        <ion-col>
+          <button ion-button (click)="goalsTapped($event)">Goals</button>
+        </ion-col>
+      </ion-row>
     </ion-grid>
   </ion-content>
   
