--- a/src/pages/goals/goals.html
+++ b/src/pages/goals/goals.html
@@ -13,6 +13,14 @@
 </ion-header>
 
 
-<ion-content padding>
 
+
+<ion-content padding>
+  <ion-item>
+    <ion-range min="0" max="200" step="1" [formControl]="control">
+      <ion-icon slot="start" size="small" name="sunny"></ion-icon>
+      <ion-icon slot="end" name="sunny"></ion-icon>
+    </ion-range>
+  </ion-item>
+  <p>{{ amount | async }}</p>
 </ion-content>
