Calculate nutrient requirements based on adjustable calorie goal

--- a/src/pages/goals/goals.html
+++ b/src/pages/goals/goals.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the GoalsPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
@@ -13,14 +7,15 @@
 </ion-header>
 
 
-
-
 <ion-content padding>
   <ion-item>
-    <ion-range min="0" max="200" step="1" [formControl]="control">
+    <ion-range min="800" max="3000" step="10" [formControl]="caloriesController">
       <ion-icon slot="start" size="small" name="sunny"></ion-icon>
       <ion-icon slot="end" name="sunny"></ion-icon>
     </ion-range>
   </ion-item>
-  <p>{{ amount | async }}</p>
+  <p>{{ calories | async }}</p>
+  <ul *ngFor="let nutrient of nuts">
+    <li><strong>{{ nutrient }}</strong>: {{ getNutrient(nutrient, calories | async) | number }}</li>
+  </ul>
 </ion-content>
